<resources>
    <string name="app_name">Kliniku</string>

    <!-- Onboarding -->
    <string name="lewati">Lewati</string>
    <string name="lanjut">Lanjut</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="onboard_title1">Nikmati layanan pemesanan klinik yang nyaman</string>
    <string name="onboard_title2">Konsultasi dengan dokter kapan saja dan di mana saja</string>
    <string name="onboard_title3">Ayo mulai dengan Kliniku</string>
    <string name="onboard_desc3">Temukan kemudahan dalam mengakses layanan kesehatan</string>

    <!-- Auth Login/Register -->
    <string name="account_title">Selamat datang di</string>
    <string name="register_desc">Daftarkan akun Anda sekarang!</string>
    <string name="login_desc">Masukkan akun Anda sekarang!</string>
    <string name="email">Email</string>
    <string name="email_hint">Masukkan email aktif Anda</string>
    <string name="phone_number_tab">No. Hp</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="full_name_hint">Masukkan nama lengkap Anda</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="birth_date_hint">Pilih tanggal lahir Anda</string>
    <string name="password">Kata Sandi</string>
    <string name="password_hint">Masukkan kata sandi Anda</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="confirm_password_hint">Masukkan kembali kata sandi Anda</string>
    <string name="register">Daftar</string>
    <string name="or">atau</string>
    <string name="register_with_google">Daftar dengan Google</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="login">Masuk</string>
    <string name="phone_number_hint">Masukkan nomor telepon Anda</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="forget_password">Lupa kata sandi?</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="failed_form">Silahkan perbaiki kesalahan pada form</string>

    <!-- Name validation -->
    <string name="error_name_empty">Nama tidak boleh kosong</string>
    <string name="error_name_too_short">Nama minimal 3 karakter</string>
    <string name="error_name_invalid_chars">Nama hanya boleh berisi huruf</string>

    <!-- Email validation -->
    <string name="error_email_empty">Email tidak boleh kosong</string>
    <string name="error_email_invalid_format">Format email tidak valid</string>

    <!-- Phone validation -->
    <string name="error_phone_empty">Nomor telepon tidak boleh kosong</string>
    <string name="error_phone_length">Nomor telepon harus 10–13 digit angka</string>
    <string name="error_phone_prefix">Nomor telepon harus dimulai dengan 08</string>

    <!-- Birthdate validation -->
    <string name="error_birthdate_empty">Tanggal lahir tidak boleh kosong</string>
    <string name="error_birthdate_too_young">Usia minimal 17 tahun</string>
    <string name="error_birthdate_invalid">Usia tidak valid</string>

    <!-- Password validation -->
    <string name="error_password_empty">Password tidak boleh kosong</string>
    <string name="error_password_too_short">Password minimal 8 karakter</string>
    <string name="error_password_uppercase">Password harus mengandung huruf besar</string>
    <string name="error_password_lowercase">Password harus mengandung huruf kecil</string>
    <string name="error_password_number">Password harus mengandung angka</string>
    <string name="error_password_special_char">Password harus mengandung karakter khusus</string>

    <!-- Confirm password -->
    <string name="error_confirm_password_empty">Konfirmasi password tidak boleh kosong</string>
    <string name="error_password_mismatch">Password tidak cocok</string>

    <!-- Forget password -->
    <string name="title_otp">Masukkan Kode OTP</string>
    <string name="desc_otp_prompt">Kami mengirim kode OTP ke</string>
    <string name="forget_password_title">Lupa Kata Sandi</string>
    <string name="loading_text">Sedang diproses, mohon tunggu…</string>
    <string name="prompt_otp">Anda tidak menerima kode?</string>
    <string name="resend">Ulangi</string>
    <string name="confirm">Konfirmasi</string>

    <string name="complete_profile_title">Lengkapi Profil</string>
    <string name="selesai">Selesai</string>

    <string name="role_admin_title">Saya Admin Klinik</string>
    <string name="role_patient_title">Saya Pasien Klinik</string>
    <string name="role_doctor_title">Saya Dokter Klinik</string>
    <string name="role_admin_desc">Pilih ini jika Anda admin Klinik</string>
    <string name="role_patient_desc">Pilih ini jika Anda pasien Klinik</string>
    <string name="role_doctor_desc">Pilih ini jika Anda dokter Klinik</string>
    <string name="step_choose_role">Pilih peran Anda</string>
    <string name="step_enter_address">Masukkan alamat Anda</string>
    <string name="step_select_gender">Pilih jenis kelamin Anda</string>
    <string name="step_upload_photo">Unggah foto profil Anda</string>
    <string name="step_role">Peran</string>
    <string name="step_address">Alamat</string>
    <string name="step_gender">Gender</string>
    <string name="step_photo">Foto</string>
    <string name="please_select_role">Tolong pilih peran anda terlebih dahulu!</string>
    <string name="complete_all_steps">Semua langkah pendaftaran belum dilengkapi!</string>
    <string name="registration_successful">Registrasi Berhasil!</string>
    <string name="exit_confirm_complete_profile">Apakah Anda ingin kembali? Data yang telah diisi akan terhapus.</string>
    <string name="yes">Iya</string>
    <string name="cancel">Batal</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="please_select_gender">Tolong pilih jenis kelamin Anda terlebih dahulu!</string>
    <string name="hint_address">Contoh : Kp. xxxxxx, Ds. xxxxx, RT 99 RW 99, Kec. xxxxxx Kab. xxxxxxx, Provinsi xxxxxxx, Indonesia, Kode Pos 99999</string>
    <string name="address">Masukkan alamat lengkap Anda</string>
    <string name="guide_address">Maksimal 100 karakter</string>
    <string name="please_enter_address">Tolong masukkan alamat Anda terlebih dahulu!</string>
    <string name="address_not_found">Alamat tidak ditemukan</string>
    <string name="please_upload_photo">Tolong unggah foto profil Anda terlebih dahulu!</string>
    <string name="guide_map">Tap pada peta untuk menyesuaikan lokasi</string>
    <string name="failed_address">Alamat tidak ditemukan</string>
    <string name="map_window_info">Ini lokasi Anda</string>
    <string name="gps_activation">Mohon aktifkan GPS</string>
    <string name="failed_permission_address">Izin lokasi diperlukan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Cari klinik atau dokter sesuai kebutuhan Anda</string>
    <string name="good_morning">Good morning,</string>
    <string name="lord_ganjar_ganzz">Lord Ganjar Ganzz</string>
    <string name="anda_belum_melakukan_pemesanan_apapun_hari_ini">Anda belum melakukan pemesanan apapun hari ini</string>
    <string name="pesan_konsultasi_dengan_klinik_dan_dokter_kepercayaan_anda_dalam_hitungan_detik">Pesan konsultasi dengan klinik dan dokter kepercayaan anda dalam hitungan detik.</string>
    <string name="cari_klinik_dan_dokter">Cari Klinik dan Dokter</string>
    <string name="lebih_dari_50_klinik_dan_100_dokter_tersedia">Lebih dari 50 klinik dan 100 dokter tersedia</string>

</resources>