<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="48dp">
        <TextView
            android:id="@+id/tvFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etFullname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_outline"
            android:ems="10"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFullname" />

        <TextView
            android:id="@+id/tvBirthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/birth_date"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFullname" />

        <EditText
            android:id="@+id/etBirthdate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_outline"
            android:ems="10"
            android:hint="@string/birth_date_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBirthdate" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etBirthdate" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_outline"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <RelativeLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/password_hint"
                android:textSize="14sp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/tglPassword" />

            <ImageView
                android:id="@+id/tglPassword"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:src="@drawable/ic_visibility_off"
                app:tint="@android:color/darker_gray" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm_password"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />

        <RelativeLayout
            android:id="@+id/confirmPasswordContainer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassword">

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/password_hint"
                android:textSize="14sp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/tglConfirmPassword" />

            <ImageView
                android:id="@+id/tglConfirmPassword"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:src="@drawable/ic_visibility_off"
                app:tint="@android:color/darker_gray" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:background="@drawable/button_normal"
            android:text="@string/register"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordContainer" />

        <LinearLayout
            android:id="@+id/separatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="14sp"
                android:textColor="@color/colorSecondary"
                android:paddingHorizontal="8dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorSecondary" />
        </LinearLayout>

        <!--<Button
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/register_with_google"
            android:textColor="@color/colorPrimary"
            android:drawableStart="@drawable/ic_google"
            android:background="@drawable/button_inactive"
            android:paddingStart="16dp"
            android:textSize="14sp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/separatorLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>-->

        <RelativeLayout
            android:id="@+id/btnGoogleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_inactive"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/separatorLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imgGoogle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/register_with_google"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/btnGoogleContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="14sp"
                android:textColor="@color/colorSecondary" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/login"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>